# sinpdf

./: LICENSE  README.md  functions.py  main.py  pyproject.toml  requirements.txt  resource.py  setup.py
UI/: main_form.py
sinpdf/: config.ini  config.py  functions.py  main.py  resource.py
src/sinpdf/: config.py  functions.py  main.py  resource.py  sinpdf.py
test/: get_files_from_path.py  get_text_from_pdf.py
