[project]
name = "sinpdf"
version = "0.1"
readme = "README.md"
authors = [
    { name = "Rifgy", email = "z-ybr@mail.ru" }
]
description = "Small program for scan PDF files massive and fast search text in result."
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = ['PyQt5>=5.15.11', 'SQLAlchemy>=2.0.41', 'pdfplumber>=0.11.6']

[project.urls]
Homepage = "https://github.com/Rifgy/sinpdf"
Issues = "https://github.com/Rifgy/sinpdf/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"